--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
+    "pdfmake": "^0.2.10",
     "primeicons": "^6.0.1",
     "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "^17.3.3",
     "@angular/localize": "^17.3.3",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.9",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
