--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "pdfmake": "^0.2.10",
     "primeicons": "^6.0.1",
     "primeng": "^17.12.0",
